--- a/client/templates/emailform/email_area.html
+++ b/client/templates/emailform/email_area.html
@@ -8,5 +8,6 @@
   <p contenteditable="true" id="signoff-word">{{signoff_word}}</p>
   <button id="start-over">Start over</button>
   <button id="save-draft-btn">Save draft</button>
+  <!-- <a href="https://mail.google.com/mail/?view=cm&fs=1&to={{toEmail}}&body={{greeting}}{{well_wishes}}{{introduction}}{{email_body}}{{signoff_word}}">Open draft in client</a> -->
   <button id="send-email-btn">Send email</button>
 </template>
