final code w/ readme

--- a/client/templates/emailform/email_form.html
+++ b/client/templates/emailform/email_form.html
@@ -2,7 +2,7 @@
   {{#if currentUser}}
     <div class="wrap">
       <div class="fleft">{{> questionArea}}</div>
-      <div class="fright" title="This is my email area">{{> emailArea this}}</div>
+      <div class="fright">{{> emailArea this}}</div>
     </div>
   {{/if}}
 </template>
